add new endpoint to upload custom models
